index with logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Storage Services
-        </title>
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cloud Storage Services</title>
 
+    <link rel="stylesheet" type="text/css" href="./static/style.css">
+
+</head>
+<body>
+    <header>
+        <nav>
+            <figure>
+                <img src="./static/logo.png" alt="Logo Goes here!">
+                <h1>Flexi Cloud</h1>
+            </figure>
+            <div class="nav-links">
+                <a href="/signin" class="btns">Sign-in</a>
+                <a href="/signup" class="btns">Sign-up</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <div class="banner">
+            <div class="txt">
+                <h1>Flexi Cloud</h1>
+                <h3>Efficiency.Speed.Security</h3>
+                <p>Explore the next generation of cloud storage with Flexi Cloud today!</p>
+            </div>
+            <figure>
+                <img src="./static/logo.gif" alt="Logo gif comes here">
+            </figure>
+        </div>
+        <div class="hero">
+            <h1>Empower Your Data with Flexi Cloud</h1>
+            <p>Welcome to Flexi Cloud, where innovation meets efficiency. Our advanced cloud storage service, powered by Amazon S3 and our state-of-the-art compression technology, offers a seamless and optimized solution for all your data needs. Experience unparalleled speed and security, all while saving on storage costs.</p>
+        </div>
+    </main>
+
+</body>
 </html>
