--- a/templates/index.html
+++ b/templates/index.html
@@ -5,39 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cloud Storage Services</title>
 
+    <link rel="icon" type="image/x-png" href="./static/favicon.png">
     <link rel="stylesheet" type="text/css" href="./static/style.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <header>
-        <nav>
-            <figure>
-                <img src="./static/logo.png" alt="Logo Goes here!">
-                <h1>Flexi Cloud</h1>
-            </figure>
-            <div class="nav-links">
-                <a href="/signin" class="btns">Sign-in</a>
-                <a href="/signup" class="btns">Sign-up</a>
-            </div>
-        </nav>
-    </header>
-
+    <script src="./static/header.js"></script>
     <main>
         <div class="banner">
             <div class="txt">
                 <h1>Flexi Cloud</h1>
                 <h3>Efficiency.Speed.Security</h3>
-                <p>Explore the next generation of cloud storage with Flexi Cloud today!</p>
+                <h4>Explore the next generation of cloud storage with Flexi Cloud today!</h4>
             </div>
             <figure>
-                <img src="./static/logo.gif" alt="Logo gif comes here">
+                <img src="./static/logo.png" alt="Logo comes here">
             </figure>
         </div>
-        <div class="hero">
-            <h1>Empower Your Data with Flexi Cloud</h1>
-            <p>Welcome to Flexi Cloud, where innovation meets efficiency. Our advanced cloud storage service, powered by Amazon S3 and our state-of-the-art compression technology, offers a seamless and optimized solution for all your data needs. Experience unparalleled speed and security, all while saving on storage costs.</p>
+        <div class="about" id="about">
+            <h1>About Us...</h1>
+            <p> Welcome to Flexi Cloud, where innovation meets efficiency. Our advanced cloud storage service, powered by Amazon S3 and our state-of-the-art compression technology, offers a seamless and optimized solution for all your data needs. Experience unparalleled speed and security, all while saving on storage costs.</p>
+        </div>
+        <br>
+        <div class="why">
+            <h1>Why choose <em>Flexi Cloud</em>?</h1>
+            {% for i in why %}
+                <div class="question">
+                    {% if i%2==0 %}
+                    <img src="./static/q/{{i}}.gif" alt="{{i}} image">
+                    <div>
+                        <h2>{{i}}. {{why[i][0]}}</h2>
+                        <p> {{why[i][1]}} </p>
+                    </div>
+                    {%else%}
+                    <div>
+                        <h2>{{i}}. {{why[i][0]}}</h2>
+                        <p> {{why[i][1]}} </p>
+                    </div>
+                    <img src="./static/q/{{i}}.gif" alt="{{i}} image">
+                    {% endif %}
+                </div>
+            {% endfor %}
+        </div>
+        <div class="started">
+            <h1>Get Started with Flexi Cloud Today</h1>
+            <p>Join the growing community of users who trust Flexi Cloud for their storage needs. Experience the future of cloud storage and retrieval with our innovative approach.</p>
+            <a href="#" class="btns">Get Started!</a>
         </div>
     </main>
-
+    <script src="./static/footer.js"></script>
 </body>
 </html>
