--- a/static/style.css
+++ b/static/style.css
@@ -5,61 +5,178 @@
 *{
 	margin: auto;
 	font-family: verdana;
+	text-align: justify;
 }
-
+body{
+	background-color: #ddf;
+}
+p{
+	font-size: 1.25rem;
+}
 header>nav{
 	display: flex;
 	justify-content: space-between;
-	padding: 1% 2%;
-	background-color: #ddf;
+	padding: 0.5% 2%;
+	background-color: #dcf;
 }
 header>nav>*{
 	margin: 0;
 }
 header>nav>figure{
 	display: flex;
-	gap: 1rem;
+	column-gap: 1rem;
 	align-items: center;
 }
 header>nav>figure>img{
-	width: 15%;
+	width: 10%;
 	margin: 0;
 }
-header>nav>figure>h1{
+header>nav>figure>div{
 	margin: 0;
-	font-size: 2.5rem;
+}
+header>nav>figure>div>h1{
+	font-family: "Yatra One";
+	font-size: 1.75rem;
+	height: 35px;
+}
+header>nav>figure>div>em{
+	font-weight: bold;
 }
 header>nav>.nav-links{
 	display: flex;
 	gap: 1rem;
 	justify-content: space-between;
 	align-items: center;
-	width: 20%;
+	width: 25%;
 	font-size: 1.15rem;
 }
-header .btns{
-	padding: 5%;
+.btns{
+	padding: 2.5%;
 	text-decoration: none;
 	color: white;
 	background-color: #05f;
 	border-radius: 7.5px;
 	text-align: center;
+	transition: 0.5s ease-in;
 }
-header .btns:nth-last-child(1){
+.btns:hover{
+	border: 1px solid #05f;
 	color: #05f;
 	background-color: #FFF;
-	border: 1px solid #05f;
 }
-
 
 main>.banner{
 	color: white;
 	display: flex;
 	justify-content: space-between;
-	padding: 3%;
+	padding: 7%;
 	background: radial-gradient(circle, rgba(0,0,57,1) 0%, rgba(0,1,200,0.9) 86%, rgba(1,2,105,1) 100%);
 }
 main>.banner>.txt>h1{
+	font-family: "Yatra One";
 	font-size: 2.7rem;
 	padding-bottom: 1%;
+}
+
+.about{
+	width: 80%;
+	padding: 5% 0% 3% 0%;
+}
+
+.about>p{
+	padding-top: 2%;
+}
+
+.why{
+	background: linear-gradient(150deg, rgba(167,188,252,1) 0%, rgba(238,252,255,1) 100%);
+}
+.why>h1{
+	padding-top: 3%;
+	width: 80%;
+}
+.why>h1>em{
+	font-family: "Yatra One";
+	font-size: 2.5rem;
+}
+.why>.question{
+	width: 70%;
+	display: flex;
+	justify-content: space-evenly;
+	column-gap: 1.5rem;
+}
+.why>.question h2{
+	padding-bottom: 3%;
+}
+.why>.question>img{
+	width: 25%;
+	padding: 1.5%;
+}
+
+.started{
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	padding: 3% 0%;
+}
+.started>p{
+	padding: 2% 0%;
+}
+.started>.btns{
+	padding: 1%;
+}
+
+footer{
+	display: flex;
+	flex-direction: column;
+	row-gap: 2rem;
+	padding: 3% 5%;
+	background-color: #333333;
+	color: #ffffff;
+	font-weight: bold;
+}
+footer>.contacts{
+	display: flex;
+	column-gap: 2rem;
+}
+footer>.contects>a{
+	transition: 0.5s ease-in;
+}
+.icon:hover{
+	fill: yellow;
+	height: 55px;
+	width: 55px;
+}
+
+form{
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	row-gap: 2rem;
+	padding: 11%;
+	background: linear-gradient(150deg, rgba(167,188,252,1) 0%, rgba(238,252,255,1) 100%);;
+}
+form h1{
+	font-size: 2.2rem;
+}
+form .btns{
+	font-size: 1.25rem;
+}
+form p, form input{
+	font-size: 1.35rem;
+	padding: 3%;
+	background-color: inherit;
+}
+form p{
+	text-align: center;
+}
+form input, form input:focus{
+	border: 0;
+	outline: none;
+	border-bottom: 2px solid #05f;
+}
+form .buttons{
+	width: 30%;
+	display: flex;
+	justify-content: space-evenly;
 }
