--- a/templates/signin.html
+++ b/templates/signin.html
@@ -24,7 +24,7 @@
                     <input type="password" name="password" required>
                 </div>
                 <div class="buttons">
-                    <button class="btns" type="reset" >Reset </button>
+                    <a class="btns" href="/change-password" >Forgot Password</a>
                     <button class="btns" type="submit">Sign In</button>
                 </div>
             </form>
