--- a/static/style.css
+++ b/static/style.css
@@ -22,24 +22,26 @@ header>nav{
 header>nav>*{
 	margin: 0;
 }
-header>nav>figure{
+header>nav>figure>a{
+	text-decoration: none;
+	color: #000;
 	display: flex;
 	column-gap: 1rem;
 	align-items: center;
 }
-header>nav>figure>img{
+header>nav>figure img{
 	width: 10%;
 	margin: 0;
 }
-header>nav>figure>div{
+header>nav>figure div{
 	margin: 0;
 }
-header>nav>figure>div>h1{
+header>nav>figure div>h1{
 	font-family: "Yatra One";
 	font-size: 1.75rem;
 	height: 35px;
 }
-header>nav>figure>div>em{
+header>nav>figure div>em{
 	font-weight: bold;
 }
 header>nav>.nav-links{
@@ -152,7 +154,7 @@ form{
 	margin: auto;
 	display: flex;
 	flex-direction: column;
-	row-gap: 2rem;
+	row-gap: 1.75rem;
 	padding: 11%;
 	background: linear-gradient(150deg, rgba(167,188,252,1) 0%, rgba(238,252,255,1) 100%);;
 }
@@ -164,7 +166,7 @@ form .btns{
 }
 form p, form input{
 	font-size: 1.35rem;
-	padding: 3%;
+	padding: 2%;
 	background-color: inherit;
 }
 form p{
