--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Flexi Cloud : Sign-In</title>
+		<title>Flexi Cloud : Dashboard</title>
         <link rel="stylesheet" type="text/css" href="./static/style.css">
         <link rel="icon" type="image/x-png" href="./static/favicon.png">
         <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
         	</div>
 
         	<div class="right">
-	        	{%if file_list==0%}
+	        	{%if file_list==[] or file_list==None %}
 	        	<h1> Your Storage is empty. </h1>
 	        	<h1> Upload a file to show up here</h1>
 	        	{%else%}
