--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,7 +16,33 @@
 	</style>
 
 	<body>
-        <script src="./static/header.js"></script>
+        <!-- <script src="./static/header.js"></script> -->
+
+        <header>
+    		<nav>
+                <figure>
+                    <a href="/" id="header">
+                        <img src="./static/logo.gif" alt="Logo gif Goes here!">
+                        <div>
+                            <h1>Flexi Cloud</h1>
+                            <em>Empower Your Data with Flexi Cloud</em>
+                        </div>
+                    </a>
+                </figure>
+                <div class="nav-links">
+                    <a href="/#about" class="btns">About Us</a>
+                    {%if session['username']%}
+                    <p class="btns">{{user[0]}}</p>
+                    <form method="POST">
+                    	<button type="submit" name="logout" class="btns">Logout</a>
+                    </form>
+                    {%else%}
+                    <a href="/signin" class="btns">Sign-in</a>
+                    <a href="/signup" class="btns">Sign-up</a>
+                    {%endif%}
+                </div>
+            </nav>
+        </header>
 
         <main class="dashboard">
         	<div class="left">
